--- a/app/src/main/res/layout/activity_student_sign_up.xml
+++ b/app/src/main/res/layout/activity_student_sign_up.xml
@@ -43,7 +43,7 @@
                 android:paddingLeft="10dp"/>
 
             <EditText
-                android:id="@+id/editPassword"
+                android:id="@+id/editPassword1"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:inputType="textPassword"
@@ -67,7 +67,7 @@
                 android:hint="비밀번호 재확인"
                 android:paddingLeft="10dp"
                 android:layout_marginBottom="16dp"
-                android:layout_below="@+id/editPassword"
+                android:layout_below="@+id/editPassword1"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/editPassword2" />
 
@@ -111,7 +111,7 @@
                 android:text="지역"
                 android:gravity="center"
                 android:id="@+id/textView5"
-                android:layout_alignStart="@+id/editPassword" />
+                android:layout_alignStart="@+id/editPassword1" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
