--- a/app/src/main/res/layout/activity_student_sign_up.xml
+++ b/app/src/main/res/layout/activity_student_sign_up.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="96dp"
                 android:layout_height="96dp"
                 android:onClick="select"
