--- a/app/src/main/res/layout/activity_teacher_sign_up.xml
+++ b/app/src/main/res/layout/activity_teacher_sign_up.xml
@@ -88,6 +88,7 @@
                     android:layout_centerHorizontal="true"
                     android:hint="전화번호"
                     android:paddingLeft="10dp"
+                    android:inputType="numberDecimal"
                     android:id="@+id/editPhoneNumber"
                     android:layout_marginBottom="2dp"
                     android:layout_marginStart="24dp"
