강좌 리스트 제거

--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -70,7 +70,7 @@
                         android:layout_marginTop="16dp"
                         android:layout_weight="1"
                         android:letterSpacing="-0.06"
-                        android:text="강사리스트"
+                        android:text="강좌리스트"
                         android:textColor="@color/colorDarkText"
                         android:textSize="16sp" />
 
@@ -88,7 +88,7 @@
                 </LinearLayout>
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler1"
+                    android:id="@+id/recycler"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:layout_below="@+id/textLayout1"
@@ -149,55 +149,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="392dp"
                     android:layout_below="@+id/textLayout2" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/block3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/block2"
-                android:layout_marginTop="16dp"
-                android:background="#FFFFFF">
-
-                <LinearLayout
-                    android:id="@+id/textLayout3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="16dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/basicText3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:layout_marginLeft="24dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_weight="1"
-                        android:letterSpacing="-0.06"
-                        android:text="강사리스트"
-                        android:textColor="@color/colorDarkText"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/moreText3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="21dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginTop="16dp"
-                        android:letterSpacing="-0.1"
-                        android:textColor="@color/greenBar"
-                        android:textSize="12sp" />
-
-                </LinearLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler2"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_below="@+id/textLayout3"
-                    android:scrollbars="horizontal"></android.support.v7.widget.RecyclerView>
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
