--- a/app/src/main/res/menu/main_menu_actionbar.xml
+++ b/app/src/main/res/menu/main_menu_actionbar.xml
@@ -3,13 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/search"
-        android:orderInCategory="1"
-        app:showAsAction="always"
-        android:icon="@drawable/search"/>
-    <item
-        android:id="@+id/aboutUs"
-        android:orderInCategory="2"
-        android:showAsAction="never"
-        android:title="About R inc."/>
+        android:id="@+id/action_search"
+        android:icon="@drawable/search"
+        android:title="Search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always"/>
 </menu>
