--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,32 @@
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
+
+
+    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="searchViewStyle">@style/MySearchViewStyle</item>
+    </style>
+
+    <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <!-- Background for the search query section (e.g. EditText) -->
+        <item name="queryBackground">@color/greenBar
+        </item>
+        <!-- Background for the actions section (e.g. voice, submit) -->
+        <item name="submitBackground">@color/colorAccent</item>
+        <!-- Close button icon -->
+        <item name="closeIcon">@drawable/close</item>
+        <!-- Search button icon -->
+        <item name="searchIcon">@drawable/search</item>
+        <!-- Go/commit button icon -->
+        <item name="goIcon">@drawable/search</item>
+        <!-- Commit icon shown in the query suggestion row -->
+        <item name="commitIcon">@drawable/search</item>
+        <!-- Layout for query suggestion rows -->
+        <item name="suggestionRowLayout">@drawable/search</item>
+    </style>
+
+
 </resources>
