--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -23,8 +23,8 @@
                 <RelativeLayout
 
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
+                    android:layout_height="match_parent">
+
                     <android.support.v4.view.ViewPager
                         android:id="@+id/home_image_slider"
                         android:layout_width="match_parent"
@@ -37,8 +37,7 @@
                         android:layout_height="48dp"
                         android:layout_alignParentBottom="true"
                         app:ci_drawable="@drawable/indicator_select"
-                        app:ci_drawable_unselected="@drawable/indicator_default"
-                        />
+                        app:ci_drawable_unselected="@drawable/indicator_default" />
 
                 </RelativeLayout>
 
