--- a/app/src/main/res/layout/fragment_home_subject.xml
+++ b/app/src/main/res/layout/fragment_home_subject.xml
@@ -68,9 +68,10 @@
                     android:id="@+id/recycler1"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
-                    android:layout_below="@+id/textLayout1"
                     android:padding="8dp"
-                    android:scrollbars="horizontal"/>
+                    android:scrollbars="horizontal"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true" />
             </RelativeLayout>
 
             <RelativeLayout
