--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -7,11 +7,11 @@
     android:background="@color/greenBar"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="com.rinc.bong.rivatorproject.controller.activitys.ProjectDetailActivity">
+    tools:context="com.rinc.bong.rivatorproject.controller.activitys.CourseDetailActivity">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorWhiteText"
+        android:background="@color/colorBackground"
         android:layout_weight="1">
         <ImageView
             android:layout_width="match_parent"
@@ -21,14 +21,15 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorWhiteText"
             android:id="@+id/titleLayout"
-            android:layout_marginBottom="8dp"
+
             android:layout_below="@+id/imageView">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="소규모 프로젝트 그룹"
+                android:text="웹 프로그래밍 기초"
                 android:id="@+id/projectTitle"
                 android:textSize="24sp"
                 android:textColor="#343434"
@@ -38,13 +39,13 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="8dp"/>
             <TextView
-                android:id="@+id/teamName"
+                android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/projectTitle"
                 android:layout_marginLeft="@dimen/notice_item_left_margin"
                 android:letterSpacing="-0.1"
-                android:text="팀명"
+                android:text="HTML"
                 android:textColor="@color/colorTextDefault"
                 android:textSize="12sp" />
 
@@ -53,29 +54,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/dot1"
                 android:layout_below="@+id/projectTitle"
-                android:layout_toRightOf="@+id/teamName"
-                android:letterSpacing="-0.1"
-                android:text=" ∙ "
-                android:textColor="@color/colorTextDefault"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/categoryName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/projectTitle"
-                android:layout_toRightOf="@+id/dot1"
-                android:letterSpacing="-0.1"
-                android:text="IT"
-                android:textColor="@color/colorTextDefault"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/dot2"
-                android:layout_below="@+id/projectTitle"
-                android:layout_toRightOf="@+id/categoryName"
+                android:layout_toRightOf="@+id/category"
                 android:letterSpacing="-0.1"
                 android:text=" ∙ "
                 android:textColor="@color/colorTextDefault"
@@ -86,18 +65,84 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/projectTitle"
-                android:layout_toRightOf="@+id/dot2"
+                android:layout_toRightOf="@+id/dot1"
                 android:letterSpacing="-0.1"
-                android:text="39시간"
+                android:text="총 124시간"
                 android:textColor="@color/colorTextDefault"
                 android:textSize="12sp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/category"
+                android:id="@+id/starImage"
+                android:layout_marginTop="31dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginBottom="9dp"
+                android:src="@drawable/star"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:text="5.0"
+                android:textColor="#787878"
+                android:layout_alignTop="@+id/starImage"
+                android:layout_toEndOf="@+id/category" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/category"
+                android:textColor="@color/colorDarkText"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:layout_marginTop="32dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="24dp"
+                android:text="230,000원"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="2dp"
+            android:background="@color/colorWhiteText"
+            android:id="@+id/teacherProfile"
+            android:layout_below="@+id/titleLayout">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:id="@+id/teacherProfileImage"
+                android:background="@drawable/teacher"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="김철수"
+                android:id="@+id/teacherName"
+                android:textColor="#121212"
+                android:letterSpacing="-0.01"
+                android:layout_toRightOf="@+id/teacherProfileImage"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="13dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/teacherName"
+                android:layout_toRightOf="@+id/teacherProfileImage"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="4dp"
+                android:text="웹프로그래밍"
+                android:textSize="12sp"
+                android:letterSpacing="-0.01"
+                android:id="@+id/subject"
+                />
         </RelativeLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="8dp"
             android:background="#f0f0f0"
-            android:layout_below="@+id/titleLayout"
+            android:layout_below="@+id/teacherProfile"
             android:id="@+id/line"/>
+        
         <android.support.design.widget.TabLayout
             android:id="@+id/tab"
             android:layout_width="match_parent"
@@ -112,10 +157,11 @@
         </android.support.design.widget.TabLayout>
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
-            android:layout_below="@+id/tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_below="@+id/tab"
+            android:layout_alignParentStart="true">
         </android.support.v4.view.ViewPager>
     </RelativeLayout>
     <LinearLayout
@@ -126,7 +172,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorMainGreen"
-            android:text="참여하기"
+            android:text="강좌 신청하기"
             android:letterSpacing="-0.05"
             android:textSize="16sp"
             android:textColor="@color/colorWhiteText"
