--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -2,20 +2,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorWhiteText"
     tools:context="com.rinc.bong.rivatorproject.controller.fragments.DescriptionFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="17dp"
-        
-        android:text="저희 팀은 하나의 웹사이트를 만들기 위해 구성되었습니다.
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="17dp"
+            android:id="@+id/descriptionText"
+            android:text="저희 팀은 하나의 웹사이트를 만들기 위해 구성되었습니다.
 웹에 대한 심층적인 공부를 원하시는 분들은 저희 팀에
 들어주시면 도움이 될 것이라 생각합니다.
 부디 저희 팀에 참여를 하시어 많은 경험을 쌓고 돌아갈 수 있었으면
 좋겠습니다." />
+    </ScrollView>
+    <!-- TODO: Update blank fragment layout -->
+
 
 </FrameLayout>
