강좌 세부 뷰 구현 완료

--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="웹 프로그래밍 기초"
-                android:id="@+id/projectTitle"
+                android:id="@+id/courseTitle"
                 android:textSize="24sp"
                 android:textColor="#343434"
                 android:letterSpacing="-0.05"
@@ -42,7 +42,7 @@
                 android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/projectTitle"
+                android:layout_below="@+id/courseTitle"
                 android:layout_marginLeft="@dimen/notice_item_left_margin"
                 android:letterSpacing="-0.1"
                 android:text="HTML"
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/dot1"
-                android:layout_below="@+id/projectTitle"
+                android:layout_below="@+id/courseTitle"
                 android:layout_toRightOf="@+id/category"
                 android:letterSpacing="-0.1"
                 android:text=" ∙ "
@@ -64,7 +64,7 @@
                 android:id="@+id/item_course_unitTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/projectTitle"
+                android:layout_below="@+id/courseTitle"
                 android:layout_toRightOf="@+id/dot1"
                 android:letterSpacing="-0.1"
                 android:text="총 124시간"
@@ -84,6 +84,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:text="5.0"
+                android:id="@+id/score"
                 android:textColor="#787878"
                 android:layout_alignTop="@+id/starImage"
                 android:layout_toEndOf="@+id/category" />
@@ -93,6 +94,7 @@
                 android:layout_below="@+id/category"
                 android:textColor="@color/colorDarkText"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:id="@+id/price"
                 android:layout_marginTop="32dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="24dp"
