--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -21,7 +21,7 @@
 부디 저희 팀에 참여를 하시어 많은 경험을 쌓고 돌아갈 수 있었으면
 좋겠습니다." />
     </ScrollView>
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank courseReviewFragment layout -->
 
 
 </FrameLayout>
