--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.rinc.bong.rivatorproject.controller.fragments.HomeMainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank courseReviewFragment layout -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
