--- a/app/src/main/res/layout/fragment_teacher.xml
+++ b/app/src/main/res/layout/fragment_teacher.xml
@@ -5,7 +5,7 @@
     android:background="#f0f0f0"
     tools:context="com.rinc.bong.rivatorproject.controller.fragments.TeacherFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank courseReviewFragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="100dp"
