--- a/app/src/main/res/layout/item_default_cousre_review.xml
+++ b/app/src/main/res/layout/item_default_cousre_review.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/name"
-        android:text="강사명"
+        android:text="사용자명"
         android:layout_marginTop="16dp"
         android:textAppearance="?textAppearanceLargePopupMenu"
         android:layout_marginLeft="81dp"
