강좌 리스트 조회시 프로필 이미지 받아오도록 수정

--- a/app/src/main/res/layout/item_default_cousre_review.xml
+++ b/app/src/main/res/layout/item_default_cousre_review.xml
@@ -4,7 +4,7 @@
     android:background="@color/colorWhiteText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/imageView"
