--- a/app/src/main/res/layout/item_default_person_list.xml
+++ b/app/src/main/res/layout/item_default_person_list.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/imageView"
