--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,11 +58,11 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="108dp"
-        app:layout_constraintVertical_bias="0.823"
         android:onClick="goToSignIn"
         android:id="@+id/button"
-        app:layout_constraintHorizontal_bias="0.431"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintVertical_bias="0.729" />
     
     <Button
         android:layout_width="328dp"
@@ -73,11 +73,12 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="19dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="36dp"
         android:onClick="goToSignUp"
-        app:layout_constraintHorizontal_bias="0.375"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintVertical_bias="0.124" />
 </android.support.constraint.ConstraintLayout>
