--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -146,7 +146,7 @@
                 <ListView
                     android:id="@+id/teacherList"
                     android:layout_width="match_parent"
-                    android:layout_height="392dp"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/textLayout2" />
             </RelativeLayout>
         </RelativeLayout>
