--- a/app/src/main/res/layout/fragment_management_default.xml
+++ b/app/src/main/res/layout/fragment_management_default.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
@@ -8,4 +8,13 @@
         android:layout_height="match_parent"
         android:id="@+id/recyclerview_default"
         android:background="@color/colorBackground"/>
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="56dp"
+        android:layout_gravity="right|bottom"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/greenBar"
+        android:src="@drawable/plus"
+        android:background="@color/greenBar"
+        android:layout_height="56dp" />
+</FrameLayout>
